# bolide

./: .gitignore  Cargo.toml  LICENSE  README.md  README_EN.md  todo.md
crates/bolide-cli/: Cargo.toml
crates/bolide-cli/src/: main.rs
crates/bolide-compiler/: Cargo.toml
crates/bolide-compiler/src/: aot.rs  jit.rs  lib.rs
crates/bolide-parser/: Cargo.toml
crates/bolide-runtime/: Cargo.toml
examples/: calculator.bl  class_only_test.bl  class_ref_test.bl  class_simple_test.bl  coroutine_demo.bl  feature_showcase.bl  gui_showcase.bl  hello.bl  lifetime_dangling_test.bl  lifetime_error_test.bl  lifetime_flow_test.bl  lifetime_multi_test.bl  lifetime_test.bl  math_utils.bl  weak_aot_test.bl  weak_class_test.bl  weak_class_test2.bl  weak_leak_test.bl  weak_linked_list.bl  weak_minimal_test.bl  weak_simple_test.bl  weak_test2.bl  weak_unowned_test.bl
std/gui/: gui.bl  gui.c  gui.h
tests/: baseline_mem.bl  channel_test.bl  fib_calculator.bl  hello.bl  pool_test.bl  print_test.bl  repro_leak_aot.bl  spawn_args.bl  test.bl  test_assign.bl  test_async.bl  test_async_args.bl  test_async_select.bl  test_await.bl  test_await_all.bl  test_bigint_arith.bl  test_bigint_func.bl  test_bigint_multi.bl  test_bigint_noprint.bl  test_bigint_simple.bl  test_bigint_stats.bl  test_borrow_min.bl  test_borrow_only.bl  test_callback.bl  test_callback2.bl  test_class.bl  test_class_bigint.bl  test_class_bigint2.bl  test_class_init.bl  test_class_mem.bl  test_comprehensive.bl  test_compute_local.bl  test_compute_single.bl  test_coroutine.bl  test_coroutine_debug.bl  test_coroutine_memory.bl  test_debug_min.bl  test_dict.bl  test_edge_cases.bl  test_edge_cases2.bl  (+67 more)
vscode-bolide/: README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
(+21 files in other folders)
