[workspace]
resolver = "2"
members = [
    "crates/bolide-cli",
    "crates/bolide-parser",
    "crates/bolide-compiler",
    "crates/bolide-runtime",
]

[workspace.package]
version = "0.5.4"
edition = "2021"
license = "MIT"
authors = ["Bolide Team"]

[workspace.dependencies]
# 语法分析
pest = "2.7"
pest_derive = "2.7"

# 代码生成
cranelift = "0.116"
cranelift-jit = "0.116"
cranelift-module = "0.116"
cranelift-object = "0.116"
cranelift-codegen = "0.116"
cranelift-frontend = "0.116"
cranelift-native = "0.116"
target-lexicon = "0.13"

# 运行时
num-bigint = "0.4"
num-traits = "0.2"
rust_decimal = "1.36"

# 错误处理
miette = { version = "7", features = ["fancy"] }
thiserror = "2"

# CLI
clap = { version = "4", features = ["derive"] }

# 工具
once_cell = "1.19"
